Can now ignore processes

--- a/x-wing/src/main/resources/config.properties
+++ b/x-wing/src/main/resources/config.properties
@@ -1,2 +1,4 @@
 # properties file
-ignored=Bla,Bloop
+
+# These processes will be ignored by the process monitor
+ignored=Jps,SomeOtherProcessToIgnore
