Created API project

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>x-wing</module>
         <module>death-star</module>
+        <module>death-star-api</module>
     </modules>
 
     <dependencies>
