--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ death-star/death-star.iml
 enforcer-one.iml
 death-star/target
 x-wing/target
+death-star-api/death-star-api.iml
+death-star-api/target
