Start work on OS specific monitoring

--- a/x-wing/src/main/resources/config.properties
+++ b/x-wing/src/main/resources/config.properties
@@ -1,4 +1,13 @@
-# properties file
+# XWing Configuration File
+
+# Death Star connection details
+deathStarHost=localhost
+deathStarPort=8080
 
 # These processes will be ignored by the process monitor
-ignored=Jps,SomeOtherProcessToIgnore
+# Separate the names of main classes by commas
+ignored=Jps
+
+# These processes will be incldued by the process monitor
+# Separate the process names to be included by commas
+included=java
