--- a/x-wing/pom.xml
+++ b/x-wing/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>xwing</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+    </dependencies>
 </project>
