OS specific monitoring

--- a/x-wing/src/main/resources/config.properties
+++ b/x-wing/src/main/resources/config.properties
@@ -8,6 +8,6 @@ deathStarPort=8080
 # Separate the names of main classes by commas
 ignored=Jps
 
-# These processes will be incldued by the process monitor
+# These processes will be included by the process monitor
 # Separate the process names to be included by commas
 included=java
