OS specific monitoring Remove jps and use ps/tasklist instead in order to be able to run with jre

--- a/x-wing/src/main/resources/config.properties
+++ b/x-wing/src/main/resources/config.properties
@@ -9,5 +9,7 @@ deathStarPort=8080
 ignored=Jps
 
 # These processes will be included by the process monitor
-# Separate the process names to be included by commas
+# Separate the process names to be included by commas.
+# The process monitor will use ps (linux/mac) or tasklist (windows)
+# to find processes matching this string and monitor them
 included=java
