--- a/death-star/pom.xml
+++ b/death-star/pom.xml
@@ -42,6 +42,11 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
