--- a/death-star/pom.xml
+++ b/death-star/pom.xml
@@ -45,7 +45,12 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>5.0.0.Alpha3-SNAPSHOT</version>
+            <version>5.0.0.Alpha2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jzlib</artifactId>
+            <version>1.1.3</version>
         </dependency>
     </dependencies>
 
