Starting on WebSockets in AngularJS Fix for ignored processes

--- a/x-wing/src/main/resources/config.properties
+++ b/x-wing/src/main/resources/config.properties
@@ -6,10 +6,14 @@ deathStarPort=8000
 
 # These processes will be ignored by the process monitor
 # Separate the names of main classes by commas
-ignored=Jps
+ignored=Jps,Launcher
 
 # These processes will be included by the process monitor
 # Separate the process names to be included by commas.
+#
 # The process monitor will use ps (linux/mac) or tasklist (windows)
 # to find processes matching this string and monitor them
+#
+# If 'java' is specified, the process monitor uses the sun.jvmstat.monitor
+# classes to more intelligently identify java main classes (similar to jps)
 included=java
