Tom's First Commit
-the client angular app works in conjunction with the base deathstar
class and the deathstar client
-run the DeathStar, then refresh the web app.  if you look at js
console, it should say "Socket has been opened"
-All of the drag and drop features work
-Once you run the DeathStarClient.java, it will send a single report and
series of statuses.  these should be reflected in angular app in various
ways.

--- a/x-wing/src/main/resources/config.properties
+++ b/x-wing/src/main/resources/config.properties
@@ -16,4 +16,4 @@ ignored=Jps,Launcher
 #
 # If 'java' is specified, the process monitor uses the sun.jvmstat.monitor
 # classes to more intelligently identify java main classes (similar to jps)
-included=java
+included=java, chrome
