--- a/death-star/pom.xml
+++ b/death-star/pom.xml
@@ -57,6 +57,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
