New Vader Component
- Dashboard user can submit a request to DeathStar for a Vader
- Vader takes a Graphite Metric Request and monitors that metric's data
- If metric data averages above the user specified threshold it
generates a report and displays to dashboard
- ToDo: Send Client error messages when metric cannot be found, path is
incorrect, etc.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>x-wing</module>
         <module>death-star</module>
         <module>death-star-api</module>
+        <module>vader</module>
     </modules>
 
     <dependencies>
