--- a/death-star/pom.xml
+++ b/death-star/pom.xml
@@ -31,6 +31,11 @@
     <dependencies>
         <dependency>
             <groupId>io.enforcer</groupId>
+            <artifactId>vader</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.enforcer</groupId>
             <artifactId>death-star-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
